collapse hide issue was fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17737,4 +17737,8 @@ a.btn-xl.btn.btn-performer.main-section {
   a.nav_links.collapse-header{
     color: #002b40 !important;
   }
+
+  .collapse-hide{
+    display: none !important;
+  }
 }
